# manim-clips

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/frameshift/: frameshift.py
manim_clips/: __init__.py  render.py  scene.py
manim_slides/: __init__.py  render.py
