[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "manim-slides"
version = "0.1.0"
description = "Export Manim animations as per-slide GIFs, suitable for drop-in use in Keynote or PowerPoint."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Harrison Green" }]
keywords = ["manim", "slides", "presentation", "gif", "keynote"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Presentation",
]
dependencies = [
    "manim>=0.18",
]

[project.urls]
Homepage = "https://github.com/hgarrereyn/manim-slides"

[tool.setuptools.packages.find]
include = ["manim_slides*"]
exclude = ["examples*", "media*", "slides_output*"]
